--- a/MLDeepSimilarity/MLDeepSimilarity.ipynb
+++ b/MLDeepSimilarity/MLDeepSimilarity.ipynb
@@ -124,16 +124,7 @@
     "x_val_2 = np.array(train_i2[count+1::])\n",
     "labels_test = np.array(labels[0:1])\n",
     "labels_train = np.array(labels[100:count])\n",
-    "labels_val = np.array(labels[count+1::])\n",
-    "\n",
-    "print(x_test_2)\n",
-    "print(x_test_1)\n",
-    "print(x_train_1.shape)\n",
-    "print(x_train_2.shape)\n",
-    "print(x_val_1.shape)\n",
-    "print(x_val_2.shape)\n",
-    "print(labels_train.shape)\n",
-    "print(labels_val.shape)"
+    "labels_val = np.array(labels[count+1::])"
    ]
   },
   {
